--- a/server/static/ntp.html
+++ b/server/static/ntp.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SDFsdfsd</title>
+    <title>Test page</title>
+    <script src="ntp.js"></script>
 </head>
 <body>
-sdfsdfsdfsdfsd
-<script src="ntp.js"></script>
+<input type="file"/>
+<button onclick="amogus()">Send</button>
 </body>
 </html>
